spacing fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -195,3 +195,22 @@ ul{
     margin-left: 0!important;
 }
 
+.col-left-img {
+    align-items: center;
+    display: flex;
+    width: 50vw;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.col-right-img {
+    align-items: center;
+    display: flex;
+    width: 50vw;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
